Add some hover styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,9 @@
 <nav class="ml-4 pt-4 font-anton">
   <ul class="flex justify-between">
     <li>
-      <div class="slide_in flex justify-start gap-8">HIREHORNPLAYERS.COM</div>
+      <a href="https://hire-horn-players.vercel.app">
+        <div class="slide_in flex justify-start gap-8">HIREHORNPLAYERS.COM</div>
+      </a>
     </li>
     <li>
       <div class="flex justify-end gap-4">
