--- a/src/components/RectangleButton.astro
+++ b/src/components/RectangleButton.astro
@@ -13,7 +13,7 @@ const { text, href } = Astro.props;
   method="get"
 >
   <button
-    class="slide_in w-4/5 border-2 pt-1 font-acumin text-[14px] text-white md:h-14"
+    class="slide_in w-4/5 border-2 pt-1 transition font-acumin text-[14px] text-white hover:bg-[#ffffff] hover:text-[#343638] md:h-14"
     type="submit">{text}</button
   >
 </form>
