--- a/src/components/CircleButton.astro
+++ b/src/components/CircleButton.astro
@@ -7,6 +7,6 @@ const { text } = Astro.props;
 ---
 
 <button
-  class="mb-4 mt-3 block h-9 w-16 rounded-[50%] bg-gray-200 font-acumin text-xs font-[1000] italic text-black"
+  class="hover:background-color-[#a0a1a2] mb-4 mt-3 block h-9 w-16 rounded-[50%] bg-gray-200 px-2 py-1 font-acumin text-xs font-[1000] italic text-black transition hover:text-[#333333] hover:shadow-md focus:outline-none focus:ring-2 focus:ring-[#333333] focus:ring-opacity-50 focus:ring-offset-2"
   type="submit">{text}</button
 >
