--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,6 +46,14 @@ const { title } = Astro.props;
       Courier New,
       monospace;
   }
+  input:hover,
+  select:hover,
+  textarea:hover {
+    background-color: #a0a1a2;
+    transition: background-color 0.2s ease;
+    border: 1px;
+    border-color: black;
+  }
   input,
   select {
     background: #e5e7eb;
