--- a/src/components/DataSecurityArticle.astro
+++ b/src/components/DataSecurityArticle.astro
@@ -1,5 +1,5 @@
 <article
-  class="slide_in mx-auto mt-2 w-[85vw] text-center font-acumin text-xs leading-snug md:w-3/4"
+  class="slide_in mx-auto mt-2 w-[85vw] text-center font-acumin text-xs leading-snug motion-reduce:animate-none md:w-3/4"
 >
   <h5 class="mx-auto mt-8 w-11/12 font-anton text-base font-[700] italic">
     ENSURING DATA SECURITY WITH A TOUCH OF BRASS
