--- a/src/components/DescriptionArticle.astro
+++ b/src/components/DescriptionArticle.astro
@@ -1,30 +1,30 @@
 <article class="mx-auto mt-2 font-acumin text-xs font-[700] leading-snug">
-  <p class="slide_in">
+  <p class="slide_in motion-reduce:animate-none">
     Are you a band looking to elevate your sound? Or perhaps a talented
     saxophonist, trombonist, or trumpeter seeking the perfect musical
     collaboration? HireHornPlayers.com connects bands with dynamic brass
     players, creating unforgettable musical experiences.
   </p>
   <br />
-  <p class="slide_in">
+  <p class="slide_in motion-reduce:animate-none">
     🎺 Hornucopia of Talent: Discover a pool of skilled and passionate
     saxophonists, trombonists, and trumpeters eager to bring their unique flair
     to your music.
   </p>
   <br />
-  <p class="slide_in">
+  <p class="slide_in motion-reduce:animate-none">
     🎙️ Get Down to Brass Tracks: Elevate your studio sessions with the soulful
     tones of experienced brass players! Whether you're crafting a jazz
     masterpiece or infusing pop tracks with brass brilliance, we’ve got you
     covered.
   </p>
   <br />
-  <p class="slide_in">
+  <p class="slide_in motion-reduce:animate-none">
     🎷 Build Your Dream Horn Section: Craft the ideal ensemble by assembling a
     full horn section that complements your band's sonic identity.
   </p>
   <br />
-  <p class="slide_in">
+  <p class="slide_in motion-reduce:animate-none">
     🚀 Amplify Your Sound: Unlock the full potential of your music by adding the
     richness and depth that only brass instruments can provide. We hope to
     empower you to explore new sonic dimensions and take your performances to
