--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import CircleButton from "../components/CircleButton.astro";
 ---
 
 <footer class="bg-[#0d0d0d] pb-8 pl-4 text-white">
-  <div class="slide_in">
+  <div class="slide_in motion-reduce:animate-none">
     <h2 class="mb-4 pt-3 font-anton text-2xl">BRASS IN THE KNOW</h2>
 
     <p class="mb-4 text-[13px] font-semibold tracking-tighter">
