--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,11 @@
   <ul class="flex justify-between">
     <li>
       <a href="https://hire-horn-players.vercel.app">
-        <div class="slide_in flex justify-start gap-8">HIREHORNPLAYERS.COM</div>
+        <div
+          class="slide_in flex justify-start gap-8 motion-reduce:animate-none"
+        >
+          HIREHORNPLAYERS.COM
+        </div>
       </a>
     </li>
     <li>
