--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -2,7 +2,7 @@
   class="relative mb-12 mt-12 flex h-16 items-center overflow-x-hidden border-y border-[#ff6123] font-acumin text-xs"
 >
   <div
-    class="animate-marquee whitespace-nowrap"
+    class="animate-marquee whitespace-nowrap motion-reduce:animate-none"
     <i
     class="nf nf-md-star_four_points mx-2"
   >
@@ -21,7 +21,7 @@
   </div>
 
   <div
-    class="absolute animate-marquee2 whitespace-nowrap"
+    class="absolute animate-marquee2 whitespace-nowrap motion-reduce:animate-none"
     <i
     class="nf nf-md-star_four_points mx-2"
   >
