--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import RectangleButton from "../components/RectangleButton.astro";
   <Header />
   <main>
     <div
-      class="slide_in md:mx-auto md:mt-20 md:flex md:w-2/3 md:justify-center lg:mt-36"
+      class="slide_in motion-reduce:animate-none md:mx-auto md:mt-20 md:flex md:w-2/3 md:justify-center lg:mt-36"
     >
       <Banner text="HIRE" text2="HORN" text3="PLAYERS" />
       <BannerImage
