Fix event type field in form

--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -67,10 +67,7 @@ const { text } = Astro.props;
         e.g., wedding, corporate event, party, recording session
       </p>
     </div>
-    <select class="pl-1 text-black" name="location">
-      <option value="chicago">Chicago</option>
-      <option value="other">Other</option>
-    </select>
+    <input type="text" name="event_type" />
   </label>
 
   <label class="flex flex-col">
