--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,8 +58,11 @@ const { title } = Astro.props;
   select {
     background: #e5e7eb;
     height: 1.5rem;
+    padding-left: .5rem;
+    height: 2rem;
   }
   textarea {
     background: #e5e7eb;
+    padding: .5rem;
   }
 </style>
