--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
     <script src="/src/app.ts"></script>
     <title>{title}</title>
   </head>
-  <body class="text-[#ff6123]">
+  <body>
     <slot />
   </body>
 </html>
@@ -34,6 +34,9 @@ const { title } = Astro.props;
   html {
     background: #191b1d;
     font-size: 22px;
+  }
+  body {
+    color: #ff6123;
   }
   code {
     font-family:
@@ -45,6 +48,14 @@ const { title } = Astro.props;
       Bitstream Vera Sans Mono,
       Courier New,
       monospace;
+  }
+  ::selection {
+    background: #ff6123;
+    color: white;
+  }
+  input:focus,
+  textarea:focus {
+    outline: none;
   }
   input:hover,
   select:hover,
@@ -58,11 +69,12 @@ const { title } = Astro.props;
   select {
     background: #e5e7eb;
     height: 1.5rem;
-    padding-left: .5rem;
+    padding-left: 0.5rem;
     height: 2rem;
+    color: black;
   }
   textarea {
     background: #e5e7eb;
-    padding: .5rem;
+    padding: 0.5rem;
   }
 </style>
