--- a/src/components/RectangleButton.astro
+++ b/src/components/RectangleButton.astro
@@ -1,19 +1,28 @@
 ---
 interface Props {
   text: string;
-  href: string;
 }
 
-const { text, href } = Astro.props;
+const { text } = Astro.props;
 ---
 
-<form
-  class="mx-auto mt-3 w-4/5 text-center md:max-w-xs"
-  action={href}
-  method="get"
->
+<form class="mx-auto mt-3 w-4/5 text-center md:max-w-xs">
   <button
+    id="book-now"
     class="slide_in w-4/5 border-2 pt-1 font-acumin text-[14px] text-white transition hover:bg-[#ffffff] hover:text-[#343638] motion-reduce:animate-none md:h-14"
-    type="submit">{text}</button
+    type="button">{text}</button
   >
 </form>
+
+<script>
+  const button = document.getElementById("book-now");
+
+  if (!button) {
+    console.error("Button not found");
+  } else {
+    button.addEventListener("click", () => {
+      const targetElement = document.getElementById("inquiry-form");
+      targetElement?.scrollIntoView({ behavior: "smooth" });
+    });
+  }
+</script>
