--- a/src/components/EmailForm.astro
+++ b/src/components/EmailForm.astro
@@ -9,10 +9,10 @@ import CircleButton from "../components/CircleButton.astro";
   id="email-form"
 >
   <input
-    class="py-4 font-acumin text-xs"
+    class="py-4 font-acumin text-xs text-black placeholder-black"
     type="text"
     name="Email_Addr"
     placeholder="Email Address"
   />
-  <CircleButton text="JOIN" />
+  <CircleButton text="JOIN" id="email-button" />
 </form>
