--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import EmailForm from "../components/EmailForm.astro";
 ---
 
-<footer class="bg-[#0d0d0d] pb-8 pl-4 text-white">
+<footer class="bg-[#0d0d0d] pb-8 pl-4 text-white" id="footer-text">
   <div class="slide_in motion-reduce:animate-none">
     <h2 class="mb-4 pt-3 font-anton text-2xl">BRASS IN THE KNOW</h2>
 
