--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -94,5 +94,5 @@ const { text } = Astro.props;
     <textarea rows="4" class="text-black" name="Budget"></textarea>
   </label>
 
-  <CircleButton text="Submit" />
+  <CircleButton text="Submit" id="inquire-button" />
 </form>
