Style rectangle button

--- a/src/components/RectangleButton.astro
+++ b/src/components/RectangleButton.astro
@@ -9,7 +9,7 @@ const { text } = Astro.props;
 <form class="mx-auto mt-3 w-4/5 text-center md:max-w-xs">
   <button
     id="book-now"
-    class="slide_in w-4/5 border-2 pt-1 font-acumin text-[14px] text-white transition hover:bg-[#ffffff] hover:text-[#343638] motion-reduce:animate-none md:h-14"
+    class="slide_in mt-1 h-14 w-4/5 border-2 pt-1 font-acumin text-[14px] text-white transition hover:bg-[#ffffff] hover:text-[#343638] motion-reduce:animate-none"
     type="button">{text}</button
   >
 </form>
