Update url for home link in header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <nav class="ml-4 pt-4 font-anton">
   <ul class="flex justify-between">
     <li>
-      <a href="https://hire-horn-players.vercel.app">
+      <a href="https://www.hirehornplayers.com">
         <div
           class="slide_in flex justify-start gap-8 motion-reduce:animate-none"
         >
